Pull request #1220: fix switch button hover
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit 8064b67e47d23e11289a6496b0ebae50289148d4
Merge: 68e98afde ce932892e
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Mar 22 15:45:35 2022 +0300

    merge

commit 68e98afde5e800e0ef57a6ff356309644290676c
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Mar 22 11:25:17 2022 +0300

    AG-13371 fix switch button hover

--- a/Extension/src/pages/popup/components/Main/main.pcss
+++ b/Extension/src/pages/popup/components/Main/main.pcss
@@ -169,17 +169,6 @@
     height: 80px;
     padding: 30px 5px 0 5px;
 
-    &:hover {
-        & .switcher__btn {
-            transition: var(--t3) box-shadow;
-            box-shadow: 0 0 0 6px rgba(0, 0, 0, 0.1);
-
-            @media (prefers-color-scheme: dark) {
-                box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.2);
-            }
-        }
-    }
-
     &__info {
         padding-top: 35px;
     }
@@ -209,7 +198,7 @@
         background-color: var(--white);
         padding: 4px;
         cursor: pointer;
-        transition: 0.3s ease transform;
+        transition: var(--t3) box-shadow;
 
         &:before {
             content: '';
@@ -218,6 +207,16 @@
             height: 100%;
             border-radius: 50%;
             background-color: var(--white);
+        }
+    }
+
+    &:hover {
+        & .switcher__btn {
+            box-shadow: 0 0 0 6px rgba(0, 0, 0, 0.1);
+
+            @media (prefers-color-scheme: dark) {
+                box-shadow: 0 0 0 6px rgba(255, 255, 255, 0.2);
+            }
         }
     }
 
